# performancetools

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jvmtidmeo/: MainActivity.kt  MineApp.kt
halfhalf_block/: build.gradle.kts
halfhalf_block/src/androidTest/java/lei/cheng/performancetools/block/: ExampleInstrumentedTest.kt
halfhalf_block/src/main/: AndroidManifest.xml
halfhalf_block/src/main/java/lei/cheng/performancetools/block/: BlockConfig.kt  BlockMonitor.kt  BlockWatchDog.kt  IBlockDB.kt  IBlockTraceReport.kt  Logger.kt  MainTracer.kt  blockktx.kt
halfhalf_block/src/main/res/layout/: layout_block_trace.xml  layout_item_trace.xml  layout_item_trace_time.xml  layout_trace_by_block.xml
halfhalf_block/src/main/res/values/: themes.xml
halfhalf_block/src/test/java/lei/cheng/performancetools/block/: ExampleUnitTest.kt
mainlock/: build.gradle.kts
mainlock/src/androidTest/java/lei/cheng/performancetools/mainlock/: ExampleInstrumentedTest.kt
mainlock/src/main/cpp/: CMakeLists.txt  dlopen.c  dlopen.h  main_lock.cpp
mainlock/src/main/java/lei/cheng/performancetools/mainlock/: ILockResult.kt  IMainBlockHandler.kt  MainLockFacade.kt  MainLockManager.kt
mylibrary/: build.gradle.kts
mylibrary/src/main/cpp/: CMakeLists.txt  common.h  entry.cpp  jnicall.cpp  jnicall.h  memory.cpp  memory.h  recordlog.cpp  recordlog.h
mylibrary/src/main/java/lei/cheng/performancetools/: JavaConfig.java  PerformanceToolsManager.kt
(+16 files in other folders)
